# PartySquaresGame

./: .gitignore  .gitmodules  CMakeLists.txt  Football Squares Help.url  README.md
Data/: GameDataFile.json
PartySquaresGame/: BasicObject.cs  Board.cs  BoardLocation.cs  BoardRow.cs  CMakeLists.txt  FileUtilities.cs  GameConfiguration.cs  GameManager.cs  HeaderSquare.cs  Money.cs  Program.cs  Score.cs  ScoreTile.cs  Square.cs  SquareGenerator.cs  SquaresBoardForm.Designer.cs  SquaresBoardForm.cs  SquaresBoardForm.resx  TeamNameForm.Designer.cs  TeamNameForm.cs  Teams.cs  User.cs  UserForm.Designer.cs  UserForm.cs  UserForm.resx  UserList.cs  WinnerClass.cs
PartySquaresGame/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
